REGRESSION(SUBPIXEL_LAYOUT): el.offsetWidth < el.clientWidth for elements of a certain size https://bugs.webkit.org/show_bug.cgi?id=106107

Source/WebCore:

Reviewed by Levi Weintraub.

Add overloaded pixelSnappedOffsetWidth|Height methods to
RenderBox that do pixel snapping with the same offset
as clientWidth/height to ensure consistent rounding.

Test: fast/sub-pixel/client-and-offset-width.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::pixelSnappedOffsetWidth):
(WebCore::RenderBox::pixelSnappedOffsetHeight):
Snap using the same offset as the clientWidth/height versions.

* rendering/RenderBox.h:
Remove out of date FIXME and add OVERRIDE keyword.

* rendering/RenderBoxModelObject.h:
Mark pixelSnappedOffsetWidth|Height as virtual.

LayoutTests:

Reviewed by Levi Weintraub.

Add test for clientWidth/offsetWidth rounding.

* fast/sub-pixel/client-and-offset-width-expected.txt: Added.
* fast/sub-pixel/client-and-offset-width.html: Added.


Canonical link: https://commits.webkit.org/124473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139013 268f45cc-cd09-0410-ab3c-d52691b4dbfc